--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-graph-vis": "^1.0.7",
     "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
