--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "clippy",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/Y",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -32,7 +33,9 @@
     "text-cleaner": "^1.2.1",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4",
-    "xml-stream": "^0.4.5"
+    "xml-js": "^1.6.11",
+    "xml-stream": "^0.4.5",
+    "xml2js": "^0.4.23"
   },
   "browser": {
     "child_process": false,
@@ -42,6 +45,7 @@
   "scripts": {
     "start": "env-cmd -f .env.stage react-scripts start",
     "build": "env-cmd -f .env.stage react-scripts build",
+    "run": "start node server.js && start npm start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
