--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
     "read-text-file": "^1.1.0",
+    "rouge": "^1.0.3",
     "sbd": "^1.0.19",
     "sentence-tokenizer": "^1.0.1",
     "stream-browserify": "^3.0.0",
